# alloy-usage

./: .env  Cargo.toml
crates/alloy-usage-examples/: Cargo.toml
crates/alloy-usage-examples/examples/: calculate-amount-out.rs
crates/mainnet-fork/: Cargo.toml
crates/mainnet-fork/examples/: get-contracts-storage-slot.rs  replay-historic-tx.rs  run-fork-mainnet.rs  simulate-frontrunning-attack.rs
crates/mainnet-fork/examples/common/: mod.rs
crates/mainnet-fork/src/: fork_mainnet.rs  lib.rs
src/: main.rs
